--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Student Bio</title>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
   </head>
 
   <body>
      <!-- Site Header -->
      <header>
         <!--The h1 tag should be used for the most important heading-->
-        <h1>Student Bio</h1>
+        <h1 class="title">Student Bio</h1>
       </header>
 
-    
-
-  </body>
-  <section>
-    <h2>Ruihan Gao</h2>
+  <section class="lesson">
+    <h2 class="title">Ruihan Gao</h2>
     <!-- Image -->
     <img src="https://ca.slack-edge.com/T03SVAX0QSD-U042UCFB3KN-9065950bcc79-48" width="200" height="200" alt="Ruihan Gao"/>
 
@@ -27,15 +25,19 @@
        My master's degree is in MBA, major in Leadership and minor in Accounting.
        I love to travle with my friends and family. 
     </p>
-    <p> <strong>Contact Info</strong></p>
+    </section>
+
+    <section>
+    <h2 class="title">Contact Info</h2>
   
      <!-- Unordered list -->
      <ul>
-      <li><strong>Email:</strong> <a href="#">toruig59@gmail.com</a></li>
-      <li><strong>Github:</strong> <a href="https://github.com/ahhyaya">ahhyaya</a></li>
-      <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      <li id="email"><strong>Email:</strong> <a href="#">toruig59@gmail.com</a></li>
+      <li id="github"><strong>Github:</strong> <a href="https://github.com/ahhyaya">ahhyaya</a></li>
+      <li id="portfolio"><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
     </ul>
 
     <!-- Link -->
-  </section>
+   </section>
+  </body>
 </html>
